@@ -1,3 +1,7 @@
+2007-05-10  David Wetzel <dave@turbocat.de> 
+  * GSWeb.framework/GSWPopUpButton.m
+  fixed "if" statement
+
 2007-04-13  David Wetzel <dave@turbocat.de>
   * Merged files from my branch to head. Changes include:
   * Nearly all Dynamic Elements rewritten
